rename page.css 2

--- a/contact-host.html
+++ b/contact-host.html
@@ -316,14 +316,14 @@
                                                       >
                                                         <div class="_5kripx">
                                                           <div
-                                                            class="_e7hn5"
+                                                            class="reviews-user__profile-wrapper"
                                                             style="
                                                               height: 48px;
                                                               width: 48px;
                                                             "
                                                           >
                                                             <div
-                                                              class="_1c81x67"
+                                                              class="reviews-user__profile-img-wrapper"
                                                               style="
                                                                 height: 48px;
                                                                 width: 48px;
@@ -1780,14 +1780,14 @@
                                                       >
                                                         <div class="_5kripx">
                                                           <div
-                                                            class="_e7hn5"
+                                                            class="reviews-user__profile-wrapper"
                                                             style="
                                                               height: 56px;
                                                               width: 56px;
                                                             "
                                                           >
                                                             <div
-                                                              class="_1c81x67"
+                                                              class="reviews-user__profile-img-wrapper"
                                                               style="
                                                                 height: 56px;
                                                                 width: 56px;
@@ -2224,7 +2224,7 @@
                                                                   ><span
                                                                     class="_o02h2l"
                                                                     ><span
-                                                                      class="_8tbpu3"
+                                                                      class="gallery__rate-icon-wrapper"
                                                                       aria-hidden="true"
                                                                       >󰀄</span
                                                                     ></span
@@ -2331,11 +2331,11 @@
                                                       </div>
                                                       <div class="_y138ax">
                                                         <div
-                                                          class="can6x7v dir dir-ltr"
+                                                          class="reserve-container__rate-table-wrapper dir dir-ltr"
                                                         >
                                                           <div>
                                                             <div
-                                                              class="cx1v2qp dir dir-ltr"
+                                                              class="availability-container__rate-table-wrapper dir dir-ltr"
                                                               style="
                                                                 border-radius: 8px;
                                                               "
@@ -2371,20 +2371,20 @@
                                                                       "
                                                                     ></div>
                                                                     <button
-                                                                      class="_16l1qv1"
+                                                                      class="availability-container__rate-1-row"
                                                                       aria-label="Change dates; Check-in: undefined; Checkout: undefined"
                                                                       type="button"
                                                                     >
                                                                       <div
-                                                                        class="_19y8o0j"
+                                                                        class="availability-container__rate-table-label-wrap"
                                                                       >
                                                                         <div
-                                                                          class="_7eq2v2"
+                                                                          class="availability-container__rate-table-header"
                                                                         >
                                                                           Check-in
                                                                         </div>
                                                                         <div
-                                                                          class="_mgs235q"
+                                                                          class="availability-container__rate-table-checkin"
                                                                           data-testid="change-dates-checkIn"
                                                                         >
                                                                           Add
@@ -2392,15 +2392,15 @@
                                                                         </div>
                                                                       </div>
                                                                       <div
-                                                                        class="_48vms8s"
+                                                                        class="availability-container__rate-table-checkout"
                                                                       >
                                                                         <div
-                                                                          class="_7eq2v2"
+                                                                          class="availability-container__rate-table-header"
                                                                         >
                                                                           Checkout
                                                                         </div>
                                                                         <div
-                                                                          class="_mgs235q"
+                                                                          class="availability-container__rate-table-checkin"
                                                                           data-testid="change-dates-checkOut"
                                                                         >
                                                                           Add
@@ -2481,7 +2481,7 @@
                                                                       "
                                                                     ></div>
                                                                     <div
-                                                                      class="_1gpyw79"
+                                                                      class="availability-container__rate-table-guest"
                                                                       aria-expanded="false"
                                                                       aria-haspopup="true"
                                                                       aria-labelledby="guests-label GuestPicker-book_it-trigger"
@@ -2493,7 +2493,7 @@
                                                                         for="GuestPicker-book_it-trigger"
                                                                         class="main-content__details-form-language-label"
                                                                         ><div
-                                                                          class="_7eq2v2"
+                                                                          class="availability-container__rate-table-header"
                                                                         >
                                                                           Guests
                                                                         </div>
