--- a/gift.html
+++ b/gift.html
@@ -422,7 +422,7 @@
                             </div>
                           </section>
                         </div>
-                        <div class="_19xnuo97">
+                        <div class="faq-container__wrapper">
                           <div class="rko5s4k dir dir-ltr">
                             <div
                               class="dir dir-ltr"
