--- a/invite-friends.html
+++ b/invite-friends.html
@@ -166,7 +166,7 @@
                         <div class="_1izdtb0">0</div>
                       </div>
                     </div>
-                    <div class="_1cvivhm">
+                    <div class="products-container__where-wrapper">
                       <button
                         type="button"
                         class="btn-light"
@@ -182,7 +182,7 @@
                 </div>
                 <div class="_1ixo0nt">
                   <div class="account-container__menu-container">
-                    <div class="_1s11ltsf">
+                    <div class="reviews-rate__wrapper">
                       <div class="_1upd47c">Common questions</div>
                       <div class="_1rdya67">
                         Check out these answers to common questions and review
