--- a/payment.html
+++ b/payment.html
@@ -313,7 +313,7 @@
                                                         Oct 9 – 14
                                                       </div>
                                                     </div>
-                                                    <div class="_fz3zdn">
+                                                    <div class="products-container__book-it-default">
                                                       <button
                                                         data-testid="checkout_platform.DATE_PICKER.edit"
                                                         aria-label="Edit dates"
@@ -358,7 +358,7 @@
                                                         1 guest
                                                       </div>
                                                     </div>
-                                                    <div class="_fz3zdn">
+                                                    <div class="products-container__book-it-default">
                                                       <button
                                                         data-testid="checkout_platform.GUEST_PICKER.edit"
                                                         aria-label="Edit Guests"
