--- a/profile.html
+++ b/profile.html
@@ -334,7 +334,7 @@
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
                         <div class="page-shell-mobile__container">
-                          <div class="_s8pn9w">
+                          <div class="nav-mobile">
                             <div class="page-shell-mobile__nav">
                               <div class="page-shell-mobile__nav-wrapper" role="presentation">
                                 <a
@@ -1399,7 +1399,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                       target="_blank"
                                                       aria-label="Jesselle User Profile"
                                                       href="/users/show/465981293"
-                                                      class="_9bezani"
+                                                      class="reviews-user__profile-img-click"
                                                       ><div class="_1i1lh00h">
                                                         <div
                                                           class="img-middle"
@@ -2502,7 +2502,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                 target="_blank"
                                                 aria-label="Jesselle User Profile"
                                                 href="/users/show/465981293"
-                                                class="_9bezani"
+                                                class="reviews-user__profile-img-click"
                                                 ><div class="_1i1lh00h">
                                                   <div
                                                     class="img-middle"
