--- a/signup_login.html
+++ b/signup_login.html
@@ -234,7 +234,7 @@
                                         value=""
                                       />
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
@@ -2382,7 +2382,7 @@
                                         value="email_signup"
                                       />
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
@@ -2538,7 +2538,7 @@
                                         </div>
                                       </div>
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
@@ -2714,7 +2714,7 @@
 
                                       <div class="_vp4g0q">
                                         <div
-                                          class="cx1v2qp dir dir-ltr"
+                                          class="availability-container__rate-table-wrapper dir dir-ltr"
                                           style="border-radius: 8px"
                                         >
                                           <div class="flex">
@@ -2801,7 +2801,7 @@
                                       </div>
                                       <div class="_vp4g0q">
                                         <div
-                                          class="cx1v2qp dir dir-ltr"
+                                          class="availability-container__rate-table-wrapper dir dir-ltr"
                                           style="border-radius: 8px"
                                         >
                                           <div class="flex">
@@ -3617,7 +3617,7 @@
                                       value=""
                                     />
                                     <div
-                                      class="cx1v2qp dir dir-ltr"
+                                      class="availability-container__rate-table-wrapper dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
                                       <div class="flex">
@@ -5760,7 +5760,7 @@
                                       value="email_signup"
                                     />
                                     <div
-                                      class="cx1v2qp dir dir-ltr"
+                                      class="availability-container__rate-table-wrapper dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
                                       <div class="flex">
@@ -5916,7 +5916,7 @@
                                       </div>
                                     </div>
                                     <div
-                                      class="cx1v2qp dir dir-ltr"
+                                      class="availability-container__rate-table-wrapper dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
                                       <div class="flex">
@@ -6092,7 +6092,7 @@
 
                                     <div class="_vp4g0q">
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
@@ -6179,7 +6179,7 @@
                                     </div>
                                     <div class="_vp4g0q">
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
