--- a/airbnb-for-work.html
+++ b/airbnb-for-work.html
@@ -213,7 +213,7 @@
                       </nav>
                       <div tabindex="-1" class="page-shell-mobile">
                         <div class="page-shell-mobile__container">
-                          <div class="_s8pn9w">
+                          <div class="nav-mobile">
                             <div class="page-shell-mobile__nav">
                               <div class="page-shell-mobile__nav-wrapper" role="presentation">
                                 <a
