--- a/help.html
+++ b/help.html
@@ -1502,7 +1502,7 @@
                                                               >
                                                                 <div>
                                                                   <div
-                                                                    class="_psmgei"
+                                                                    class="products-container__book-status"
                                                                     style="
                                                                       margin-top: 0px;
                                                                     "
@@ -1609,7 +1609,7 @@
                                                                   class="_12xcxtl"
                                                                 >
                                                                   <div
-                                                                    class="_psmgei"
+                                                                    class="products-container__book-status"
                                                                     style="
                                                                       margin-bottom: 0px;
                                                                     "
@@ -1693,7 +1693,7 @@
                                                               >
                                                                 <div>
                                                                   <div
-                                                                    class="_psmgei"
+                                                                    class="products-container__book-status"
                                                                     style="
                                                                       margin-top: 0px;
                                                                     "
@@ -1770,7 +1770,7 @@
                                                                   class="_12xcxtl"
                                                                 >
                                                                   <div
-                                                                    class="_psmgei"
+                                                                    class="products-container__book-status"
                                                                     style="
                                                                       margin-bottom: 0px;
                                                                     "
@@ -1889,7 +1889,7 @@
                                                       <div class="_q3t855k">
                                                         <div>
                                                           <div
-                                                            class="_psmgei"
+                                                            class="products-container__book-status"
                                                             style="
                                                               margin-top: 0px;
                                                             "
@@ -1983,7 +1983,7 @@
                                                         </div>
                                                         <div class="_12xcxtl">
                                                           <div
-                                                            class="_psmgei"
+                                                            class="products-container__book-status"
                                                             style="
                                                               margin-bottom: 0px;
                                                             "
@@ -2045,7 +2045,7 @@
                                                       <div class="_q3t855k">
                                                         <div>
                                                           <div
-                                                            class="_psmgei"
+                                                            class="products-container__book-status"
                                                             style="
                                                               margin-top: 0px;
                                                             "
@@ -2115,7 +2115,7 @@
                                                         </div>
                                                         <div class="_12xcxtl">
                                                           <div
-                                                            class="_psmgei"
+                                                            class="products-container__book-status"
                                                             style="
                                                               margin-bottom: 0px;
                                                             "
@@ -2182,7 +2182,7 @@
                                                     <div class="_q3t855k">
                                                       <div>
                                                         <div
-                                                          class="_psmgei"
+                                                          class="products-container__book-status"
                                                           style="
                                                             margin-top: 0px;
                                                           "
@@ -2275,7 +2275,7 @@
                                                       </div>
                                                       <div class="_12xcxtl">
                                                         <div
-                                                          class="_psmgei"
+                                                          class="products-container__book-status"
                                                           style="
                                                             margin-bottom: 0px;
                                                           "
@@ -2337,7 +2337,7 @@
                                                     <div class="_q3t855k">
                                                       <div>
                                                         <div
-                                                          class="_psmgei"
+                                                          class="products-container__book-status"
                                                           style="
                                                             margin-top: 0px;
                                                           "
@@ -2406,7 +2406,7 @@
                                                       </div>
                                                       <div class="_12xcxtl">
                                                         <div
-                                                          class="_psmgei"
+                                                          class="products-container__book-status"
                                                           style="
                                                             margin-bottom: 0px;
                                                           "
