--- a/payments/payment-methods.html
+++ b/payments/payment-methods.html
@@ -229,7 +229,7 @@
                       <div tabindex="-1" class="page-shell-mobile">
                         <div class="page-shell-mobile__container">
                           <div class="page-shell-mobile__container">
-                            <div class="_s8pn9w">
+                            <div class="nav-mobile">
                               <div class="page-shell-mobile__nav">
                                 <div
                                   class="page-shell-mobile__nav-wrapper"
