--- a/privacy-and-sharing.html
+++ b/privacy-and-sharing.html
@@ -214,7 +214,7 @@
                       <div tabindex="-1" class="privacy-sharing__container">
                         <div class="page-shell-mobile__container">
                           <div class="page-shell-mobile__container">
-                            <div class="_s8pn9w">
+                            <div class="nav-mobile">
                               <div class="page-shell-mobile__nav">
                                 <div class="page-shell-mobile__nav-wrapper" role="presentation">
                                   <a
