rename page.css 2

--- a/signup_login.html
+++ b/signup_login.html
@@ -234,7 +234,7 @@
                                         value=""
                                       />
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
@@ -2256,7 +2256,7 @@
                                         value="email_signup"
                                       />
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
@@ -2412,7 +2412,7 @@
                                         </div>
                                       </div>
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
@@ -2588,7 +2588,7 @@
 
                                       <div class="_vp4g0q">
                                         <div
-                                          class="cx1v2qp dir dir-ltr"
+                                          class="availability-container__rate-table-wrapper dir dir-ltr"
                                           style="border-radius: 8px"
                                         >
                                           <div class="flex">
@@ -2675,7 +2675,7 @@
                                       </div>
                                       <div class="_vp4g0q">
                                         <div
-                                          class="cx1v2qp dir dir-ltr"
+                                          class="availability-container__rate-table-wrapper dir dir-ltr"
                                           style="border-radius: 8px"
                                         >
                                           <div class="flex">
@@ -3491,7 +3491,7 @@
                                       value=""
                                     />
                                     <div
-                                      class="cx1v2qp dir dir-ltr"
+                                      class="availability-container__rate-table-wrapper dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
                                       <div class="flex">
@@ -5634,7 +5634,7 @@
                                       value="email_signup"
                                     />
                                     <div
-                                      class="cx1v2qp dir dir-ltr"
+                                      class="availability-container__rate-table-wrapper dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
                                       <div class="flex">
@@ -5790,7 +5790,7 @@
                                       </div>
                                     </div>
                                     <div
-                                      class="cx1v2qp dir dir-ltr"
+                                      class="availability-container__rate-table-wrapper dir dir-ltr"
                                       style="border-radius: 8px"
                                     >
                                       <div class="flex">
@@ -5966,7 +5966,7 @@
 
                                     <div class="_vp4g0q">
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
@@ -6053,7 +6053,7 @@
                                     </div>
                                     <div class="_vp4g0q">
                                       <div
-                                        class="cx1v2qp dir dir-ltr"
+                                        class="availability-container__rate-table-wrapper dir dir-ltr"
                                         style="border-radius: 8px"
                                       >
                                         <div class="flex">
